tests/baselines/reference/jsFileCompilationPublicParameterModifier.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
tests/cases/compiler/a.js(1,23): error TS8012: 'parameter modifiers' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
==== tests/cases/compiler/a.js (1 errors) ====
    class C { constructor(public x) { }}
                          ~~~~~~
!!! error TS8012: 'parameter modifiers' can only be used in a .ts file.